examples/valid/program31.c
char get_char() {
    return 'a';
}

int main() {
    char c;
    c = get_char();
    return 0;
}

