examples/invalid/program35.c
int f(int a) {
    return a;
}

int main() {
    int x;
    x = f();
    return x;
}

